Fixed the overlapping stories section

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ body {
   justify-content: space-between;
   align-items: center;
   position: relative;
+  z-index: -1;
   background: #fff;
   border: 1px solid #dfdfdf;
   border-radius: 8px;
